--- a/DDRInventory/Properties/launchSettings.json
+++ b/DDRInventory/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7105;http://localhost:5190"
+      "applicationUrl": "https://0.0.0.0:7105"
     },
     "IIS Express": {
       "commandName": "IISExpress",
