Added Docker compatibility (might need to roll this back)

--- a/DDRInventory/DDRInventory.csproj
+++ b/DDRInventory/DDRInventory.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
+    <ContainerImageName>Breeze-IMS</ContainerImageName>
+    <ContainerImageTags>v3.0.1</ContainerImageTags>
+	<PublishProfile>DefaultContainer</PublishProfile>
+	<RuntimeIdentifier>win10-x64</RuntimeIdentifier>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
