Still trying to dockerize

--- a/DDRInventory/DDRInventory.csproj
+++ b/DDRInventory/DDRInventory.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <ContainerImageName>Breeze-IMS</ContainerImageName>
-    <ContainerImageTags>v3.0.1</ContainerImageTags>
+    <ContainerImageTags>latest</ContainerImageTags>
 	<PublishProfile>DefaultContainer</PublishProfile>
-	<RuntimeIdentifier>win10-x64</RuntimeIdentifier>
+	<RuntimeIdentifier>linux-x64</RuntimeIdentifier>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
