--- a/DDRInventory/Dockerfile
+++ b/DDRInventory/Dockerfile
@@ -10,6 +10,6 @@ RUN dotnet publish -c Release -o out
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
-WORKDIR /App
-COPY --from=build-env /App/out .
+WORKDIR /DDRInventory
+COPY --from=build-env /DDRInventory/out .
 ENTRYPOINT ["dotnet", "DDRInventory.dll"]
