Sending updates for Patrick

--- a/DDRInventory/Dockerfile
+++ b/DDRInventory/Dockerfile
@@ -2,14 +2,16 @@ FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
 WORKDIR /DDRInventory
 
 # Copy everything
-COPY . ./
-# Restore as distinct layers
+COPY *.csproj ./
 RUN dotnet restore
-# Build and publish a release
+
+# Copy everything else and build
+COPY . ./
 RUN dotnet publish -c Release -o out
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /DDRInventory
 COPY --from=build-env /DDRInventory/out .
-ENTRYPOINT ["dotnet", "DDRInventory.dll"]
+
+CMD dotnet HelloWorld.dll --urls "http://*:$PORT"
