--- a/DDRInventory-UI/package.json
+++ b/DDRInventory-UI/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.11.10",
     "@tanstack/react-query": "^4.28.0",
     "bootstrap": "^5.2.3",
+    "echarts-for-react": "^3.0.2",
     "http-proxy-middleware": "^2.0.6",
     "material-react-table": "^1.8.3",
     "react": "^18.2.0",
